Perform GH-Pages, Update Readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hexocean-interview-project",
   "version": "0.1.0",
+  "homepage":"https://Mentos2509.github.io/HexOcean-Interview-Project",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1"
+    "@redux-devtools/core": "^3.13.1",
+    "gh-pages": "^5.0.0"
   }
 }
