--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hexocean-interview-project",
   "version": "0.1.0",
-  "homepage":"https://Mentos2509.github.io/HexOcean-Interview-Project",
+  "homepage":"https://mentos2509.github.io/DishForm-using-Redux/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
